--- a/server/.env.example
+++ b/server/.env.example
@@ -7,14 +7,13 @@ PORT=5001
 # MongoDB Atlas Connection
 # Get from: MongoDB Atlas → Database → Connect → Connect your application
 # Important: URL encode special characters in password (@ becomes %40)
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/database?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://Admin:<Rajasingh8890@>@cluster0.cmpq5xp.mongodb.net/?appName=Cluster0
 
 # JWT Secret (Keep this secure!)
 # Generate with: node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
 JWT_SECRET=your_secure_random_jwt_secret_key_here
 
 # Frontend URL (Update with your deployed frontend URL)
-CLIENT_URL=https://your-frontend-url.netlify.app
-
+CLIENT_URL=https://cyberallinoneshop.netlify.app/
 # Admin Email
-ADMIN_EMAIL=your_admin_email@example.com
+ADMIN_EMAIL=kanu9264@gmail.com
