--- a/server/.env.production
+++ b/server/.env.production
@@ -1,6 +1,6 @@
 NODE_ENV=production
 PORT=5001
-MONGODB_URI=your_mongodb_atlas_connection_string
+MONGODB_URI=mongodb+srv://Admin:<Rajasingh8890@>@cluster0.cmpq5xp.mongodb.net/?appName=Cluster0
 JWT_SECRET=your_secure_random_jwt_secret
-CLIENT_URL=https://your-frontend-url.netlify.app
-ADMIN_EMAIL=your_admin_email@example.com
+CLIENT_URL=https://cyberallinoneshop.netlify.app/
+ADMIN_EMAIL=kanu9264@gmail.com
